--- a/env.example
+++ b/env.example
@@ -2,5 +2,13 @@ GITHUB_TOKEN=your_github_token_here
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
-LLM_PROVIDER=openai
-LLM_MODEL=gpt-3.5-turbo
+GEMINI_API_KEY=your_gemini_api_key_here
+LLM_PROVIDER=groq
+LLM_MODEL=llama2-70b-4096
+GITHUB_APP_ID=your_github_app_id_here
+GITHUB_PRIVATE_KEY=your_github_app_private_key_here
+GITHUB_WEBHOOK_SECRET=your_github_app_webhook_secret_here
+SLACK_WEBHOOK_URL=your_slack_webhook_url_here
+JIRA_URL=your_jira_url_here
+JIRA_USERNAME=your_jira_username_here
+JIRA_API_TOKEN=your_jira_api_token_here
